--- a/enesortak/enesortak.csproj
+++ b/enesortak/enesortak.csproj
@@ -6,4 +6,12 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <PropertyGroup Condition=" '$(RunConfiguration)' == 'https' " />
+  <PropertyGroup Condition=" '$(RunConfiguration)' == 'http' " />
+  <ItemGroup>
+    <None Remove="DenemeController\" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="DenemeController\" />
+  </ItemGroup>
 </Project>
